[Front-end] Fixed progress bar screwing up the card (Had an extra margin at bottom)

--- a/bootstrap-3.1.0/less/progress-bars.less
+++ b/bootstrap-3.1.0/less/progress-bars.less
@@ -27,7 +27,6 @@
 .progress {
   overflow: hidden;
   height: @line-height-computed;
-  margin-bottom: @line-height-computed;
   background-color: @progress-bg;
   border-radius: @border-radius-base;
   .box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
